SFUSA/force-app/main/default/objects/POS_Item__mdt/fields/hasInsert__c.field-meta.xml
<CustomField>
        <fullName>hasInsert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasInsert</label>
        <type>Checkbox</type>
    </CustomField>