SFUSA/force-app/main/default/objects/POS_Item__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <type>TextArea</type>
    </CustomField>