SFUSA/force-app/main/default/objects/POS_Item__mdt/fields/Options__c.field-meta.xml
<CustomField>
        <fullName>Options__c</fullName>
        <description>Options to be displayed on each pos item.  Must be separated by a semicolon</description>
        <label>Options</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>